# loadtest-yagna

./: .gitignore  Dockerfile  main.py  metrics.py  model.py  pyproject.toml  requirements.txt  utils.py  yagna.py
loadtest_framework/analysis/: analyzer.py
loadtest_framework/core/: event_collector.py  runner.py  tui.py
loadtest_framework/locust_suites/: nanotask_locust.py
loadtest_framework/suites/: base_suite.py
tests/: cpu_stress_suite.json  cpu_stress_suite.py  nanotask.py  nanotask_suite.json  nanotask_suite.py
