[tool.poetry]
name = "loadtest-yagna"
version = "0.1.0"
description = "Stress test for Yagna"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
locust = "^2.37.13"
pydantic = "^2.11.7"
requests = "^2.32.4"
python-dotenv = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
