[tool.poetry]
name = "loadtest-yagna"
version = "0.1.0"
description = "Stress test for Yagna"
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
locust = "^2.37.13"
pydantic = "^2.11.7"
requests = "^2.32.4"
prometheus-client = "^0.22.1"
python-dotenv = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
